fix services alignemnt on mobile

--- a/src/styles/home_styles.css
+++ b/src/styles/home_styles.css
@@ -149,9 +149,10 @@
     }
   
     .service-grid {
-      flex-direction: column;
-      align-items: center;
-    }
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
   
     .hero-buttons {
       flex-direction: column;
